<resources>
    <string name="app_name">Clear Car</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_title">Şəxsi məlumatlar</string>
    <string name="home_title">Ana səyfə</string>
    <string name="order_title">Sifarişlər</string>
    <string name="about_title">Haqqında</string>
    <string name="reservation_title">Rezervasiya</string>
    <string name="about_description">Həyatınızı asanlaşdıracaq mobil tətbiq. Ən yaxın yerdə ən tez avtoyuma üçün online növbə. Rahatlığınız üçün hər şeyi maksimum sadə etdik.</string>
    <string name="next">Davam</string>
    <string name="country_code">+994</string>
    <string name="hint_phone">(XX)XXX-XX-XX</string>
    <string name="hint_otp_code">Sms kodu daxil et</string>
    <string name="registr_title">QEYDİYYAT</string>
    <string name="hint_name">Ad</string>
    <string name="hint_car_number">Maşın nömrəsi</string>
    <string name="confirm">Təsdiq et</string>
    <string name="sing_in">GİRİŞ</string>
    <string name="sign_up">Yeni Qeydiyyat</string>
    <string name="choose_date">Günü seçin</string>
    <string name="choose_time">Vaxtı seçin</string>
    <string name="car_type">Maşının növü:</string>
    <string name="sedan">Sedan</string>
    <string name="jeep">Jeep</string>
    <string name="services">Xidmətlər:</string>
    <string name="full_wash">Tam maşın yuma</string>
    <string name="half_wash">Çöl yuma</string>
    <string name="cleaning">Kimyəvi təmizləmə</string>
    <string name="date_time">Gün və tarıx:</string>
    <string name="order">Sifariş et</string>
    <string name="car_washing_name">Avto yuma adı:</string>
    <string name="load_data">yüklənir</string>
    <string name="car_washing_lbl">Avto yuma:</string>
    <string name="car_type_lbl">Maşının növü:</string>
    <string name="service_type">Xidmət növü:</string>
    <string name="day_time_lbl">Tarix və vaxt:</string>
    <string name="exit">Çıxış</string>
    <string name="load_message_txt">Zəhmət olmasa gözləyin</string>
    <string name="true_order_fill">Zəhmət olmasa sifarişi düzgün doldurun.</string>
    <string name="save">Yadda Saxla</string>
    <string name="cancel_order">Sifarişdən imtina</string>
    <string name="reservation">Rezervasiya</string>
</resources>