<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_pages"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="az.washing.carservice.ui.main.MainFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_bookingFragment"
            app:destination="@id/bookingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/main_nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="az.washing.carservice.ui.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/personalFragment"
        android:name="az.washing.carservice.ui.main.PersonalFragment"
        android:label="@string/info_title"
        tools:layout="@layout/fragment_personal" />
    <fragment
        android:id="@+id/bookingFragment"
        android:name="az.washing.carservice.ui.order.BookingFragment"
        android:label="@string/reservation"
        tools:layout="@layout/fragment_booking">
        <action
            android:id="@+id/action_bookingFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
        <action
            android:id="@+id/action_bookingFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="az.washing.carservice.ui.order.OrderFragment"
        android:label="@string/order_title"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_bookingFragment2"
            app:destination="@id/bookingFragment" />
    </fragment>
</navigation>